@@ -1,3 +1,9 @@
+2013-11-23  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
+
+	* soap-client.el (soap-should-encode-value-for-xs-element): new
+	function
+	(soap-encode-xs-element): don't encode nil value unless needed
+
 2013-11-17  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* soap-client.el (soap-bound-operation): new slot `soap-body`
